alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
 }
 
 .buttons {
+  align-self: center;
   margin-left: auto;
   margin-right: 0;
 }
@@ -35,6 +36,7 @@ img {
 }
 
 button {
+  display:block;
   width: 100px;
   margin: 2px;
   background: white;
